--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<div th:insert="~{fragment :: header}"></div>
 <form method="post" th:action="@{/admin/{id}/update(id=${user.id})}" th:object="${user}">
     <label for="username">Name:
         <input id="username" type="text" name="username" th:value="*{username}">
