--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -2,17 +2,84 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Users</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+          crossorigin="anonymous">
 </head>
 <body>
-<div th:insert="~{fragment :: header}"></div>
-<div>
-    <h3><a href="admin/new">click to add new user</a></h3>
-    <h2>Users List:</h2>
-</div>
-<div th:each="user : ${users}">
-    <h3><a th:href="@{'admin/' + ${user.id}}" th:text="|${user.id}. ${user.getUsername()}|">Users</a>
-    </h3>
+<nav class="navbar sticky-top bg-dark" data-bs-theme="dark">
+    <div class="container-fluid">
+        <form class="navbar-form navbar-left">
+            <strong><span style="color: white" th:text="${user.email}">VALUE</span></strong>
+            <span style="color: white" th:text="${' with roles: ' + user.roles}">VALUE</span>
+        </form>
+<!--        <a class="navbar-brand"-->
+<!--           th:text="|${user.getEmail()} with roles: ${user.getRoles()}|">Roles</a>-->
+        <form class="d-flex" role="search">
+            <div th:insert="~{fragment :: header}"></div>
+        </form>
+    </div>
+</nav>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-2 px-1">
+            <div class="d-flex flex-column pt-2 ">
+                <div class="list-group list-group-flush">
+                    <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
+                        Admin
+                    </a>
+                    <a th:href="@{/user}" class="list-group-item list-group-item-action">User</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-9 px-5 bg-body-secondary h-100 vh-100">
+            <div class="col bg-light bg-body-secondary">
+                <h1>Admin Panel</h1>
+                <nav class="nav nav-tabs" id="nav-tab" role="tablist">
+                    <a class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" href="/admin" role="tab" aria-controls="nav-home" aria-selected="true">User Table</a>
+                    <a class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" th:href="@{/admin/new}" role="tab" aria-controls="nav-profile" aria-selected="false">New User</a>
+                </nav>
+                <table class="table table-striped table-bordered ">
+                    <thead class="table-light">
+                     <tr class="table-active"><th scope="col">All Users</th></tr>
+                    </thead>
+                    <div class="container-fluid ">
+                        <table class="table table-striped px-4">
+                            <thead>
+                            <tr>
+                                <th scope="col">Id</th>
+                                <th scope="col">First Name</th>
+                                <th scope="col">Last Name</th>
+                                <th scope="col">Age</th>
+                                <th scope="col">Email</th>
+                                <th scope="col">Role</th>
+                                <th scope="col">Edit</th>
+                                <th scope="col">Delete</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <div th:each="us : ${users}">
+                                <tr>
+                                    <td th:text="|${us.getId()}|">Id</td>
+                                    <td th:text="|${us.getName()}|">Name</td>
+                                    <td th:text="|${us.getSurname()}|">Surname</td>
+                                    <td th:text="|${us.getAge()}|">Age</td>
+                                    <td th:text="|${us.getEmail()}|">Email</td>
+                                    <td th:text="|${us.getRoles()}|">Roles</td>
+
+                                </tr>
+                            </div>
+                            </tbody>
+                        </table>
+                    </div>
+                </table>
+
+            </div>
+    </div>
+    </div>
 </div>
 </body>
 </html>
