--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -7,14 +7,17 @@
 <body>
 <div th:insert="~{fragment :: header}"></div>
 <form method="post" th:action="@{/admin/{id}/update(id=${user.id})}" th:object="${user}">
-    <label for="username">Name:
-        <input id="username" type="text" name="username" th:value="*{username}">
+    <label for="name">Name:
+        <input id="name" type="text" name="name" th:value="*{name}">
     </label><br>
     <label for="surname">Surname:
         <input id="surname" type="text" name="surname" th:value="*{surname}">
     </label><br>
     <label for="age">Age:
         <input id="age" type="number" name="age" th:value="*{age}">
+    </label><br>
+    <label for="email">Email:
+        <input id="email" type="text" name="email" th:value="*{email}">
     </label><br>
     <label for="password">Password:
         <input id="password" type="text" name="password" th:value="*{password}">
