--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -2,15 +2,92 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>User page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+          crossorigin="anonymous">
 </head>
 <body>
-<div th:insert="~{fragment :: header}"></div>
-<div>
-    <span th:text="${user.getName()}">Username</span>
-    <span th:text="${user.getSurname()}">undefined</span>
-    <span th:text="${user.getAge()}">undefined</span>
-</div>
+<nav class="navbar sticky-top bg-dark" data-bs-theme="dark">
+    <div class="container-fluid">
+        <form class="navbar-brand">
+            <strong><span style="color: white" th:text="${user.email}">VALUE</span></strong>
+            <span style="color: white"> with roles:</span>
+            <span th:each="role : ${user.getRoles()}">
+                <span th:text="${role}">Role</span>
+            </span>
+        </form>
+        <div>
+            <form action="/logout">
+                <button style="color: gray" type="submit" class="btn btn-dark">Logout</button>
+            </form>
+        </div>
+    </div>
+</nav>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-2 px-1">
+            <div class="d-flex flex-column pt-2 ">
+                <div class="list-group list-group-flush">
+                    <div th:if="${role_name.equals('ADMIN')}">
+                        <a th:href="@{/admin}" class="list-group-item list-group-item-action" >
+                            Admin
+                        </a>
+                    </div>
+                    <a th:href="@{/user}" class="list-group-item list-group-item-action active">User</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-10 px-5 bg-body-secondary h-100 vh-100">
+            <div class="col bg-light bg-body-secondary">
+                <h1>User information-page</h1>
 
+                <table class="table">
+                    <thead>
+                    <tr class="table-active">
+                        <th scope="col">About user</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>
+                            <div class="container-fluid px-4">
+                                <table class="table table-striped px-4">
+                                    <thead>
+                                    <tr>
+                                        <th scope="col">Id</th>
+                                        <th scope="col">First Name</th>
+                                        <th scope="col">Last Name</th>
+                                        <th scope="col">Age</th>
+                                        <th scope="col">Email</th>
+                                        <th scope="col">Role</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td th:text="|${user.getId()}|">Id</td>
+                                            <td th:text="|${user.getName()}|">Name</td>
+                                            <td th:text="|${user.getSurname()}|">Surname</td>
+                                            <td th:text="|${user.getAge()}|">Age</td>
+                                            <td th:text="|${user.getEmail()}|">Email</td>
+                                            <td>
+                                                <span th:each="role : ${user.getRoles()}">
+                                                    <span th:text="${role}">Role</span>
+                                                </span>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
